<resources>
    <!--<string name="app_name">Automotive</string>-->
    <string name="app_name">Choupette</string>
    <string name="action_back">Back</string>
    <string name="action_home">Home</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_search">Search</string>
    <string name="hello">"Bonjour, je suis Choupette"</string>
    <string name="search_hint">36 Boulevard du Tertre, Saint-Herblain 44800</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="btn_cantine">La Cantine numérique - Nantes</string>
    <string name="btn_paris">Le dernier bar avant la fin du monde - Paris</string>
    <string name="sqli_n">Agence SQLI Nantes</string>
    <string name="bnt_billund">Legoland - Billund (Danemark)</string>
    <string name="cantine_num">La cantine du numérique (Nantes)</string>
    <string name="dernier_bar">Le dernier bar avant la fin du monde</string>
    <string name="legoland">Legoland (Danemark)</string>
    <string name="btn_londres">Le tardis - Londres</string>
    <string name="btn_sqli">Agence SQLI - Nantes</string>
    <string name="destination_text">Sélectionnez votre destination :</string>
    <string name="tardis">Tardis</string>
    <string name="text_GoodBye">Merci d\'avoir utilisé l\'application</string>
    <string name="txt_end_image">End image</string>
    <string name="txt_arrived">Je confirme</string>
    <string name="ttl_research">Sélectionnez un véhicule en scannant son QR code</string>
    <string name="txt_JourneyInProgress">Voyage en cours</string>
    <string name="txt_ttl_arrived">Vous êtes arrivés à destination</string>
    <string name="img_arrived">img_arrived</string>
    <string name="txt_tmp">Temporaire - à changer</string>
    <string name="btn_refuse">Je refuse</string>
    <string name="txt_ttl_contract">Tarif de la course</string>
    <string name="Txt_to">A</string>
    <string name="txt_price">Prix</string>
    <string name="txt_from">De</string>
    <string name="typo_separateur">/</string>
    <string name="txt_distance">1200km</string>
    <string name="txt_car_rate">4.5/5</string>
    <string name="txt_max_score">5</string>
    <string name="txt_car_name">Choupette</string>
    <string name="txt_car_model_name">Coccinnelle</string>
    <string name="btn_rent_me">Je l\'utilise maintenant</string>
    <string name="txt_report_bug">Rapporter un bug</string>
    <string name="txt_constructor_name">Volkswagen</string>
    <string name="img_car_picture">Car picture</string>
    <string name="img_not_describe">is this img exist</string>
    <string name="img_love">img_love</string>
    <string name="ttl_selected_car">Véhicule sélectionné</string>
    <string name="btn_accept">j\'accepte et je paie</string>
    <string name="ttl_end_api">Crédit</string>
    <string name="btn_returnHome">début démo</string>
    <string name="img_cc_arrived">image car arrived</string>
    <string name="nepastoucher">Pour les besoins de la démos, merci de ne pas toucher ce bouton.</string>
</resources>
