<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.joel.test.MainActivity">
    <item
        android:id="@+id/action_back"
        android:orderInCategory="100"
        android:title="@string/action_back"
        android:icon="@drawable/ic_back"
        app:showAsAction="ifRoom"
        android:name="android:actionMenuTextColor">#fff</item>
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"
        android:name="android:actionMenuTextColor">#fff</item>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"
        android:name="android:actionMenuTextColor">#fff</item>
</menu>
