<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="@string/txt_ttl_contract"
        android:id="@id/txt_contract"
        android:textAlignment="center"
        android:layout_weight="0.70" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="413dp"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        tools:ignore="InefficientWeight,UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_from"
            android:id="@+id/textView2"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txt_from"
            android:layout_gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:text="@string/Txt_to"
            android:id="@+id/textView4"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txt_destination"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_price"
            android:id="@+id/textView5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txt_price"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/First_Button"
            android:text="Accepter"
            android:id="@+id/btn_accept"
            android:layout_gravity="center"
            android:nestedScrollingEnabled="false"
            android:layout_weight="0.05"
            tools:ignore="HardcodedText" />

        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Second_Button"
        android:text="@string/btn_refuse"
        android:id="@+id/btn_cancel"
        android:layout_gravity="center"
        android:nestedScrollingEnabled="false"
        android:layout_weight="0.06" />
    </LinearLayout>
</LinearLayout>