<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_arrived"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.example.sqli.automotive.com.sqli.automotive.ArrivedActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Title"
            android:id="@+id/txt_ttl_arrived"
            android:text="@string/txt_ttl_arrived"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="0.25"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            app:srcCompat="@drawable/cc_arrived_montage"
            android:id="@+id/img_cc_arrived"
            android:layout_height="200dp"
            android:contentDescription="@string/img_cc_arrived"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.55">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_arrived"
            android:id="@+id/btn_destination"
            style="@style/First_Button"
            android:padding="10dp"
            android:nestedScrollingEnabled="false"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</LinearLayout>
